@@ -1,0 +1,4 @@
+# $Id$
+
+static Client_Strategy_Factory "-ORBTransportMuxStrategy EXCLUSIVE -ORBClientConnectionHandler RW -ORBConnectStrategy blocked"
+static Resource_Factory "-ORBFlushingStrategy blocking"
